Colaboratory를 통해 생성됨

--- a/stock-etc/03-02-get-corporate-open-information-from-dart.ipynb
+++ b/stock-etc/03-02-get-corporate-open-information-from-dart.ipynb
@@ -48,7 +48,7 @@
         "import pandas as pd"
       ],
       "id": "RK3QTbWDofS7",
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -57,13 +57,26 @@
         "id": "Q71ALk2klOwe"
       },
       "source": [
-        "crtfc_key = \"\"\n",
-        "with open('./sample_data/my_data.txt', 'r') as reader:\n",
-        "  crtfc_key = reader.readline()\n",
+        "crtfc_key = '94f6f704a87d5868d411db6c48a4bc01194d4bd2'\n",
+        "# crtfc_key = \"\"\n",
+        "# with open('./sample_data/my_data.txt', 'r') as reader:\n",
+        "#   crtfc_key = reader.readline()\n",
         "  # print(crtfc_key)"
       ],
       "id": "Q71ALk2klOwe",
-      "execution_count": null,
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CtWWN3FNfFD0"
+      },
+      "source": [
+        "user_agent = \"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.212 Safari/537.36\""
+      ],
+      "id": "CtWWN3FNfFD0",
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -76,7 +89,7 @@
         "now = datetime.today().strftime('%Y%m%d')"
       ],
       "id": "rYaAHzkRpAnn",
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -88,7 +101,7 @@
         "corp_code = '005930' # 삼성전자"
       ],
       "id": "kJP0yw1eoMS4",
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -98,157 +111,44 @@
       },
       "source": [
         "def make_api_url(corp_code, bgn_de='19990101', end_de=now, pblntf_ty='A', pblntf_detail_ty=['A001','A002','A003'], page_count='100'):\n",
-        "  url = \"https://opendart.fss.or.kr/api/list.json?\\\n",
-        "                                                  crtfc_key={corp_code}\\\n",
-        "                                                  &corp_code={corp_code}\\\n",
-        "                                                  &bgn_de={bgn_de}\\\n",
-        "                                                  &end_de={end_de}\\\n",
-        "                                                  &pblntf_ty={pblntf_ty}\\\n",
-        "                                                  &pblntf_detail_ty={pblntf_detail_ty}\\\n",
-        "                                                  &page_count={page_count}\".format(crtfc_key=crtfc_key,\\\n",
-        "                                                                                   corp_code=corp_code,\\\n",
-        "                                                                                   bgn_de=bgn_de,\\\n",
-        "                                                                                   end_de=end_de,\\\n",
-        "                                                                                   pblntf_ty=pblntf_ty,\\\n",
-        "                                                                                   pblntf_detail_ty=pblntf_detail_ty,\\\n",
-        "                                                                                   page_count=page_count)"
+        "\n",
+        "  for i, code in enumerate(pblntf_detail_ty):\n",
+        "    pblntf_detail_ty[i] = 'pblntf_detail_ty=' + code\n",
+        "    if i != (len(pblntf_detail_ty)-1): pblntf_detail_ty[i] += '&'\n",
+        "  pblntf_detail_ty = \"\".join(pblntf_detail_ty)\n",
+        "\n",
+        "  url = \"https://opendart.fss.or.kr/api/list.json?crtfc_key={crtfc_key}&corp_code={corp_code}&bgn_de={bgn_de}&end_de={end_de}&pblntf_ty={pblntf_ty}&{pblntf_detail_ty}&page_count={page_count}\".format(\\\n",
+        "                                                              crtfc_key=crtfc_key,corp_code=corp_code,bgn_de=bgn_de,end_de=end_de,pblntf_ty=pblntf_ty,pblntf_detail_ty=pblntf_detail_ty,page_count=page_count)\n",
+        "  return url"
       ],
       "id": "C7Z9U4U-nfZI",
-      "execution_count": null,
+      "execution_count": 40,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dwpg9npiMwr1"
-      },
-      "source": [
-        ""
-      ],
-      "id": "dwpg9npiMwr1",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "z_9TqeqxnfO6",
+        "id": "_C5afApssEJn",
+        "outputId": "fecc6677-3dea-479e-89d0-22f1a0fd20af",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 128
-        },
-        "outputId": "4ed373b2-bae5-4425-f3f6-5a59ee54ff41"
-      },
-      "source": [
-        "test = \"\"\n",
-        "[test += i, for i in ['hello', 'bye']]\n",
-        "test\n"
-      ],
-      "id": "z_9TqeqxnfO6",
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-26-550c58a53cd7>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    [test += i, for i in ['hello', 'bye']]\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
+          "base_uri": "https://localhost:8080/"
         }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "1yObfsTnnfDp",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "55dc675e-c9f7-44b2-ccb3-219aa3f35493"
       },
       "source": [
-        "test"
-      ],
-      "id": "1yObfsTnnfDp",
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'hellobye'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 24
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "XkvWDIcB1fE4",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "c0f3f023-ae55-4f6c-e62f-44a1e05acbd0"
-      },
-      "source": [
-        "a"
-      ],
-      "id": "XkvWDIcB1fE4",
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'aaaabbbb'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 21
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "30dxHmEPog-b"
-      },
-      "source": [
-        "url = \"http://dart.fss.or.kr/pdf/download/excel.do?rcp_no=20210517001718&dcm_no=8074927&lang=ko\"\n",
-        "\n",
-        "user_agent = \"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.212 Safari/537.36\"\n",
-        "result = requests.get(url, headers={\"user-agent\":user_agent})"
-      ],
-      "id": "30dxHmEPog-b",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "_C5afApssEJn"
-      },
-      "source": [
-        "result"
+        "url = make_api_url(corp_code)\n",
+        "print(url)"
       ],
       "id": "_C5afApssEJn",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "https://opendart.fss.or.kr/api/list.json?crtfc_key=94f6f704a87d5868d411db6c48a4bc01194d4bd2&corp_code=005930&bgn_de=19990101&end_de=20210610&pblntf_ty=A&pblntf_detail_ty=A001&pblntf_detail_ty=A002&pblntf_detail_ty=A003&page_count=100\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -256,24 +156,82 @@
         "id": "alQS6DOCyNi0"
       },
       "source": [
-        "result.content"
+        "response = requests.get(url, headers={\"user-agent\":user_agent})"
       ],
       "id": "alQS6DOCyNi0",
-      "execution_count": null,
+      "execution_count": 45,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1pLamGw5sxtK"
+        "id": "FNaqt38ffegC",
+        "outputId": "72cae6f4-80b7-4cd9-c8da-9e8182db6d92",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "pd.read_json(response.content)['list'][:-1]"
+      ],
+      "id": "FNaqt38ffegC",
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0     {'corp_code': '00126380', 'corp_name': '삼성전자',...\n",
+              "1     {'corp_code': '00126380', 'corp_name': '삼성전자',...\n",
+              "2     {'corp_code': '00126380', 'corp_name': '삼성전자',...\n",
+              "3     {'corp_code': '00126380', 'corp_name': '삼성전자',...\n",
+              "4     {'corp_code': '00126380', 'corp_name': '삼성전자',...\n",
+              "                            ...                        \n",
+              "87    {'corp_code': '00126380', 'corp_name': '삼성전자',...\n",
+              "88    {'corp_code': '00126380', 'corp_name': '삼성전자',...\n",
+              "89    {'corp_code': '00126380', 'corp_name': '삼성전자',...\n",
+              "90    {'corp_code': '00126380', 'corp_name': '삼성전자',...\n",
+              "91    {'corp_code': '00126380', 'corp_name': '삼성전자',...\n",
+              "Name: list, Length: 92, dtype: object"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 70
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1pLamGw5sxtK",
+        "outputId": "f4bcbc81-ab36-4c34-95ac-e5188c349425",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# Byte raw data => BytesIO Object => Read Excel\n",
-        "f = BytesIO(result.content)\n"
+        "f = BytesIO(response.content)\n",
+        "f"
       ],
       "id": "1pLamGw5sxtK",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<_io.BytesIO at 0x7f305cd0a650>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 47
+        }
+      ]
     },
     {
       "cell_type": "code",
