Colaboratory를 통해 생성됨

--- a/stock-etc/03-02-get-corporate-open-information-from-dart.ipynb
+++ b/stock-etc/03-02-get-corporate-open-information-from-dart.ipynb
@@ -48,7 +48,7 @@
         "import pandas as pd"
       ],
       "id": "RK3QTbWDofS7",
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -64,7 +64,7 @@
         "  # print(crtfc_key)"
       ],
       "id": "Q71ALk2klOwe",
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -76,7 +76,7 @@
         "user_agent = \"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.212 Safari/537.36\""
       ],
       "id": "CtWWN3FNfFD0",
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -89,7 +89,7 @@
         "now = datetime.today().strftime('%Y%m%d')"
       ],
       "id": "rYaAHzkRpAnn",
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -101,7 +101,7 @@
         "corp_code = '005930' # 삼성전자"
       ],
       "id": "kJP0yw1eoMS4",
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -122,33 +122,21 @@
         "  return url"
       ],
       "id": "C7Z9U4U-nfZI",
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_C5afApssEJn",
-        "outputId": "fecc6677-3dea-479e-89d0-22f1a0fd20af",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "_C5afApssEJn"
       },
       "source": [
         "url = make_api_url(corp_code)\n",
         "print(url)"
       ],
       "id": "_C5afApssEJn",
-      "execution_count": 41,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "https://opendart.fss.or.kr/api/list.json?crtfc_key=94f6f704a87d5868d411db6c48a4bc01194d4bd2&corp_code=005930&bgn_de=19990101&end_de=20210610&pblntf_ty=A&pblntf_detail_ty=A001&pblntf_detail_ty=A002&pblntf_detail_ty=A003&page_count=100\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -159,57 +147,53 @@
         "response = requests.get(url, headers={\"user-agent\":user_agent})"
       ],
       "id": "alQS6DOCyNi0",
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FNaqt38ffegC",
-        "outputId": "72cae6f4-80b7-4cd9-c8da-9e8182db6d92",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "zCL_0zvf1Eub"
       },
       "source": [
-        "pd.read_json(response.content)['list'][:-1]"
+        "pd.read_json(response.content)"
       ],
-      "id": "FNaqt38ffegC",
-      "execution_count": 70,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0     {'corp_code': '00126380', 'corp_name': '삼성전자',...\n",
-              "1     {'corp_code': '00126380', 'corp_name': '삼성전자',...\n",
-              "2     {'corp_code': '00126380', 'corp_name': '삼성전자',...\n",
-              "3     {'corp_code': '00126380', 'corp_name': '삼성전자',...\n",
-              "4     {'corp_code': '00126380', 'corp_name': '삼성전자',...\n",
-              "                            ...                        \n",
-              "87    {'corp_code': '00126380', 'corp_name': '삼성전자',...\n",
-              "88    {'corp_code': '00126380', 'corp_name': '삼성전자',...\n",
-              "89    {'corp_code': '00126380', 'corp_name': '삼성전자',...\n",
-              "90    {'corp_code': '00126380', 'corp_name': '삼성전자',...\n",
-              "91    {'corp_code': '00126380', 'corp_name': '삼성전자',...\n",
-              "Name: list, Length: 92, dtype: object"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 70
-        }
-      ]
+      "id": "zCL_0zvf1Eub",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1pLamGw5sxtK",
-        "outputId": "f4bcbc81-ab36-4c34-95ac-e5188c349425",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "FNaqt38ffegC"
+      },
+      "source": [
+        "list = pd.read_json(response.content)['list'].tolist()\n",
+        "pd.DataFrame.from_records(list)"
+      ],
+      "id": "FNaqt38ffegC",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UoHszLAyGfGe"
+      },
+      "source": [
+        "url =  'http://dart.fss.or.kr/dsaf001/main.do?rcpNo=20210517001185'\n",
+        "response = requests.get(url, headers={\"user-agent\":user_agent})\n",
+        "\n",
+        "response.content.decode('UTF-8')"
+      ],
+      "id": "UoHszLAyGfGe",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1pLamGw5sxtK"
       },
       "source": [
         "# Byte raw data => BytesIO Object => Read Excel\n",
@@ -217,21 +201,8 @@
         "f"
       ],
       "id": "1pLamGw5sxtK",
-      "execution_count": 47,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<_io.BytesIO at 0x7f305cd0a650>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 47
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -263,62 +234,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sDaVssyuTmbw",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "734a8040-d3e2-43d2-a307-c572ccb39824"
+        "id": "sDaVssyuTmbw"
       },
       "source": [
         ""
       ],
       "id": "sDaVssyuTmbw",
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "total 16\n",
-            "drwxr-xr-x 1 root root 4096 Jun  1 13:40 .\n",
-            "drwxr-xr-x 1 root root 4096 Jun  9 06:40 ..\n",
-            "drwxr-xr-x 4 root root 4096 Jun  1 13:40 .config\n",
-            "drwxr-xr-x 1 root root 4096 Jun  1 13:40 sample_data\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9iEuoiuAYSM0",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "bec1b235-8ccc-4ee9-ac57-73a385257d64"
+        "id": "9iEuoiuAYSM0"
       },
       "source": [
         "ls -al sample_data/"
       ],
       "id": "9iEuoiuAYSM0",
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "total 55512\n",
-            "drwxr-xr-x 1 root root     4096 Jun  1 13:40 \u001b[0m\u001b[01;34m.\u001b[0m/\n",
-            "drwxr-xr-x 1 root root     4096 Jun  1 13:40 \u001b[01;34m..\u001b[0m/\n",
-            "-rwxr-xr-x 1 root root     1697 Jan  1  2000 \u001b[01;32manscombe.json\u001b[0m*\n",
-            "-rw-r--r-- 1 root root   301141 Jun  1 13:40 california_housing_test.csv\n",
-            "-rw-r--r-- 1 root root  1706430 Jun  1 13:40 california_housing_train.csv\n",
-            "-rw-r--r-- 1 root root 18289443 Jun  1 13:40 mnist_test.csv\n",
-            "-rw-r--r-- 1 root root 36523880 Jun  1 13:40 mnist_train_small.csv\n",
-            "-rwxr-xr-x 1 root root      930 Jan  1  2000 \u001b[01;32mREADME.md\u001b[0m*\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -336,44 +271,19 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-gvnZtnajYyd",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "4ac84a80-ff89-4558-8f5f-80e445b6a181"
+        "id": "-gvnZtnajYyd"
       },
       "source": [
         "ls -al sample_data/"
       ],
       "id": "-gvnZtnajYyd",
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "total 55520\n",
-            "drwxr-xr-x 1 root root     4096 Jun  9 06:55 \u001b[0m\u001b[01;34m.\u001b[0m/\n",
-            "drwxr-xr-x 1 root root     4096 Jun  1 13:40 \u001b[01;34m..\u001b[0m/\n",
-            "-rwxr-xr-x 1 root root     1697 Jan  1  2000 \u001b[01;32manscombe.json\u001b[0m*\n",
-            "-rw-r--r-- 1 root root   301141 Jun  1 13:40 california_housing_test.csv\n",
-            "-rw-r--r-- 1 root root  1706430 Jun  1 13:40 california_housing_train.csv\n",
-            "-rw-r--r-- 1 root root 18289443 Jun  1 13:40 mnist_test.csv\n",
-            "-rw-r--r-- 1 root root 36523880 Jun  1 13:40 mnist_train_small.csv\n",
-            "-rw-r--r-- 1 root root       40 Jun  9 07:01 my_data.txt\n",
-            "-rwxr-xr-x 1 root root      930 Jan  1  2000 \u001b[01;32mREADME.md\u001b[0m*\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Wdu1dQlkja1s",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "a70f7d12-e703-448a-f6c4-6e600280b96e"
+        "id": "Wdu1dQlkja1s"
       },
       "source": [
         "with open('./sample_data/my_data.txt', 'r') as reader:\n",
@@ -383,39 +293,19 @@
       ],
       "id": "Wdu1dQlkja1s",
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "94f6f704a87d5868d411db6c48a4bc01194d4bd2\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "C2b8yTVrkeC1",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "c414b5ee-5d4c-439a-e711-ceb4e9066d28"
+        "id": "C2b8yTVrkeC1"
       },
       "source": [
         "!cat ./sample_data/my_data.txt"
       ],
       "id": "C2b8yTVrkeC1",
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "94f6f704a87d5868d411db6c48a4bc01194d4bd2"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
