Colaboratory를 통해 생성됨

--- a/stock-etc/03-02-get-corporate-open-information-from-dart.ipynb
+++ b/stock-etc/03-02-get-corporate-open-information-from-dart.ipynb
@@ -45,7 +45,8 @@
       "source": [
         "import requests\n",
         "from io import BytesIO\n",
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "import re"
       ],
       "id": "RK3QTbWDofS7",
       "execution_count": null,
@@ -57,10 +58,9 @@
         "id": "Q71ALk2klOwe"
       },
       "source": [
-        "crtfc_key = '94f6f704a87d5868d411db6c48a4bc01194d4bd2'\n",
         "# crtfc_key = \"\"\n",
-        "# with open('./sample_data/my_data.txt', 'r') as reader:\n",
-        "#   crtfc_key = reader.readline()\n",
+        "# with open('./sample_data/my_data.txt', 'r') as f:\n",
+        "#   crtfc_key = f.readline()\n",
         "  # print(crtfc_key)"
       ],
       "id": "Q71ALk2klOwe",
@@ -132,7 +132,7 @@
       },
       "source": [
         "url = make_api_url(corp_code)\n",
-        "print(url)"
+        "# print(url)"
       ],
       "id": "_C5afApssEJn",
       "execution_count": null,
@@ -156,7 +156,8 @@
         "id": "zCL_0zvf1Eub"
       },
       "source": [
-        "pd.read_json(response.content)"
+        "df_resp = pd.read_json(response.content)\n",
+        "df_resp"
       ],
       "id": "zCL_0zvf1Eub",
       "execution_count": null,
@@ -168,10 +169,24 @@
         "id": "FNaqt38ffegC"
       },
       "source": [
-        "list = pd.read_json(response.content)['list'].tolist()\n",
-        "pd.DataFrame.from_records(list)"
+        "list_resp = df_resp['list'].tolist()\n",
+        "df = pd.DataFrame.from_records(list_resp)\n",
+        "df"
       ],
       "id": "FNaqt38ffegC",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qecnF_IYparl"
+      },
+      "source": [
+        "report_nms = df['report_nm'].tolist()[:10]\n",
+        "rcept_nos = df['rcept_no'].tolist()[:10]"
+      ],
+      "id": "qecnF_IYparl",
       "execution_count": null,
       "outputs": []
     },
@@ -181,10 +196,11 @@
         "id": "UoHszLAyGfGe"
       },
       "source": [
-        "url =  'http://dart.fss.or.kr/dsaf001/main.do?rcpNo=20210517001185'\n",
-        "response = requests.get(url, headers={\"user-agent\":user_agent})\n",
-        "\n",
-        "response.content.decode('UTF-8')"
+        "dcm_nos = []\n",
+        "for rcept_no in rcept_nos:\n",
+        "  url =  'http://dart.fss.or.kr/dsaf001/main.do?rcpNo={rcept_no}'.format(rcept_no=rcept_no)\n",
+        "  response = requests.get(url, headers={\"user-agent\":user_agent})\n",
+        "  dcm_nos.append(re.search(r\"'{rcept_no}', '(.*?)',\".format(rcept_no=rcept_no), response.content.decode('UTF-8')).group(1))"
       ],
       "id": "UoHszLAyGfGe",
       "execution_count": null,
@@ -193,117 +209,21 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1pLamGw5sxtK"
+        "id": "LPSk7Q8fww9f"
       },
       "source": [
-        "# Byte raw data => BytesIO Object => Read Excel\n",
-        "f = BytesIO(response.content)\n",
-        "f"
+        "sheets = [\"연결 재무상태표\",\"연결 손익계산서\",\"연결 포괄손익계산서\",\"연결 자본변동표\",\"연결 현금흐름표\",\"재무상태표\",\"손익계산서\"]\n",
+        "\n",
+        "def download_excel(report_nm, rcept_no, dcm_no):\n",
+        "    url = \"http://dart.fss.or.kr/pdf/download/excel.do?rcp_no={rcp_no}&dcm_no={dcm_no}&lang=ko\".format(rcp_no=rcept_no,dcm_no=dcm_no)\n",
+        "    response = requests.get(url, headers={\"user-agent\":user_agent})\n",
+        "    f = BytesIO(response.content)\n",
+        "\n",
+        "    for sheet in sheets:\n",
+        "        df = pd.read_excel(f, sheet_name=sheet, skiprows=5)\n",
+        "        df.to_csv(report_nm+\"_\"+sheet+\".csv\", encoding=\"euc-kr\")"
       ],
-      "id": "1pLamGw5sxtK",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Dw1e6h7IXMpw"
-      },
-      "source": [
-        "sheets = [\"연결 재무상태표\",\"연결 손익계산서\",\"연결 포괄손익계산서\",\"연결 자본변동표\",\"연결 현금흐름표\",\"재무상태표\",\"손익계산서\"]"
-      ],
-      "id": "Dw1e6h7IXMpw",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Xf3MwnmmXY_F"
-      },
-      "source": [
-        "# 엑셀 파일에서 sheet의 내용을 읽어 sheet 이름으로 파일에 저장\n",
-        "for sheet in sheets:\n",
-        "  df = pd.read_excel(f, sheet_name=sheet, skiprows=5)\n",
-        "  df.to_csv(sheet+\".csv\", encoding=\"euc-kr\")\n"
-      ],
-      "id": "Xf3MwnmmXY_F",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "sDaVssyuTmbw"
-      },
-      "source": [
-        ""
-      ],
-      "id": "sDaVssyuTmbw",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "9iEuoiuAYSM0"
-      },
-      "source": [
-        "ls -al sample_data/"
-      ],
-      "id": "9iEuoiuAYSM0",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "4La8mTPbihCu"
-      },
-      "source": [
-        "with open('./sample_data/my_data.txt', 'w') as f:\n",
-        "    f.writelines(\"94f6f704a87d5868d411db6c48a4bc01194d4bd2\")"
-      ],
-      "id": "4La8mTPbihCu",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "-gvnZtnajYyd"
-      },
-      "source": [
-        "ls -al sample_data/"
-      ],
-      "id": "-gvnZtnajYyd",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Wdu1dQlkja1s"
-      },
-      "source": [
-        "with open('./sample_data/my_data.txt', 'r') as reader:\n",
-        "  # Read & print the entire file\n",
-        "  crte_data = reader.readline()\n",
-        "  print(crte_data)"
-      ],
-      "id": "Wdu1dQlkja1s",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "C2b8yTVrkeC1"
-      },
-      "source": [
-        "!cat ./sample_data/my_data.txt"
-      ],
-      "id": "C2b8yTVrkeC1",
+      "id": "LPSk7Q8fww9f",
       "execution_count": null,
       "outputs": []
     },
@@ -313,9 +233,22 @@
         "id": "gB38Q_s_kw9a"
       },
       "source": [
-        ""
+        "for report_nm, rcept_no, dcm_no in zip(report_nms, rcept_nos, dcm_nos):\n",
+        "  download_excel(report_nm, rcept_no, dcm_no)"
       ],
       "id": "gB38Q_s_kw9a",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RNp0yNuS2rOj"
+      },
+      "source": [
+        "pd.read_csv('분기보고서 (2021.03)_재무상태표.csv',encoding=\"euc-kr\")"
+      ],
+      "id": "RNp0yNuS2rOj",
       "execution_count": null,
       "outputs": []
     }
