Colaboratory를 통해 생성됨

--- a/stock-etc/03-02-get-corporate-open-information-from-dart.ipynb
+++ b/stock-etc/03-02-get-corporate-open-information-from-dart.ipynb
@@ -196,6 +196,12 @@
         "id": "UoHszLAyGfGe"
       },
       "source": [
+        "\"\"\" match text between two strings with regular-expression\n",
+        " >>> s = 'Part 1. Part 2. Part 3 then more text'\n",
+        " >>> re.search(r'Part 1\\.(.*?)Part 3', s).group(1)\n",
+        " ' Part 2. '\n",
+        "\"\"\"\n",
+        "\n",
         "dcm_nos = []\n",
         "for rcept_no in rcept_nos:\n",
         "  url =  'http://dart.fss.or.kr/dsaf001/main.do?rcpNo={rcept_no}'.format(rcept_no=rcept_no)\n",
